http changed to https in index file

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 <link href="cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/animatea14e.css?v=17046942425478865338" rel="stylesheet" type="text/css" media="all" />
 <link href="cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/font-all.minc83d.css?v=14597452402338798491" rel="stylesheet" type="text/css" media="all" />  
 
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
-<!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> -->
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
@@ -61,7 +61,7 @@
   window.use_sticky = true;
   window.enable_sidebar_multiple_choice = false;
   // window.loading_url = "cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/loading9491.gif?v=9255329245202621775";     
-  // window.file_url = "http://cdn.shopify.com/s/files/1/0437/5671/6194/files/?2174";
+  // window.file_url = "https://cdn.shopify.com/s/files/1/0437/5671/6194/files/?2174";
   window.asset_url = "";
   window.use_color_swatch = true;
   window.color_swatch_style = "variant_grouped";
