--- a/pages/about.html
+++ b/pages/about.html
@@ -54,7 +54,7 @@
     rel="stylesheet" type="text/css" media="all" />
   <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/style5576.css?v=5169164907222966650"
     rel="stylesheet" type="text/css" media="all" />
-  <link href="http://cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/slick.scss?v=10122632354879939270"
+  <link href="https://cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/slick.scss?v=10122632354879939270"
     rel="stylesheet" type="text/css" media="all" />
   <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/prettyPhotode1c.css?v=12757784511525754184"
     rel="stylesheet" type="text/css" media="all" />
@@ -64,19 +64,13 @@
     rel="stylesheet" type="text/css" media="all" />
 
   <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+  <!-- <link rel="stylesheet" type="text/css"
     href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
-
-
   <link rel="stylesheet" type="text/css"
     href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
-
-
   <link rel="stylesheet" type="text/css"
-    href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
-
-
-  <link rel="stylesheet" type="text/css"
-    href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+    href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
 
   <script src="../code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="../ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
@@ -127,7 +121,7 @@
                           </div>
                           <div class="header-mb-middle header-mb-items">
                             <div class="header-logo">
-                              <h1 class="site-header__logo" itemscope itemtype="http://schema.org/Organization">
+                              <h1 class="site-header__logo" itemscope itemtype="https://schema.org/Organization">
                                 <a  href="../index.html" style="max-width:20 px;">
                                   <img class="normal-logo" src="../img/logo.png" alt="Sam ceramics" itemprop="logo">
                                   <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
