--- a/pages/404-error.html
+++ b/pages/404-error.html
@@ -14,7 +14,7 @@
   
   <!-- Title and description ================================================== -->
   <title>
-    404 Not Found &ndash; tileo
+    404 Not Found &ndash; Sam Ceramics
   </title>
   
   <!-- Social meta ================================================== -->
