--- a/pages/about.html
+++ b/pages/about.html
@@ -121,7 +121,7 @@
                           </div>
                           <div class="header-mb-middle header-mb-items">
                             <div class="header-logo">
-                              <h1 class="site-header__logo" itemscope itemtype="https://schema.org/Organization">
+                              <h1 class="site-header__logo">
                                 <a  href="../index.html" style="max-width:20 px;">
                                   <img class="normal-logo" src="../img/logo.png" alt="Sam ceramics" itemprop="logo">
                                   <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
@@ -259,14 +259,12 @@
                               <nav class="nav-bar" role="navigation">
                                 <ul class="site-nav checking">
                                     <li class="menu-lv-1 item">
-                                      <a class="current"  href="../index.html">
+                                      <a class="menu__moblie"  href="../index.html">
                                         Home
                                       </a>
                                     </li>
                                     <li class="menu-lv-1 item">
-
-                                      <a class="menu__moblie "  href="#">
-
+                                      <a class="current"  href="#">
                                         About Us
                                         <!-- <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -274,7 +272,7 @@
                                       </a>
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
-                                      <a class="menu__moblie "  href="#">
+                                      <a class="menu__moblie"  href="#">
                                         Product
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -289,23 +287,17 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-
-                                            <a class="  " href="about.html">
-
+                                            <a class="  " href="kag.html">
                                               KAG
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-
-                                            <a class="  " href="services.html">
-
+                                            <a class="  " href="tecton.html">
                                               Tecton
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-
                                             <a class="  " href="catalogue.html">
-
                                               Catalogue
                                             </a>
                                           </li>
@@ -343,9 +335,7 @@
                                       </div>
                                     </li>
                                     <li class="menu-lv-1 item">
-
                                       <a class="menu__mobile"  href="contact.html">
-
                                         Contact
                                       </a>
                                     </li>
@@ -1103,8 +1093,8 @@
 
                     <li><a href="#">About Us</a></li>
 
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Catalogue</a></li>
+                    <li><a href="photos.html">Gallery</a></li>
+                    <li><a href="catalogue.html">Catalogue</a></li>
                     <!-- <li><a href="pages/privacy-policy.html">Privacy Policy</a></li>
                     <li><a href="pages/privacy-policy.html">Shipping Details</a></li> -->
                   </ul>
