Modified contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -564,7 +564,7 @@
         <input type="email" id="ContactFormEmail" placeholder="Enter your Email" name="Email" autocorrect="off" autocomplete="off" autocapitalize="off" required="required">
         <input type="number" id="ContactFormSub" placeholder="Enter your Phone Number" name="Phone Number" autocomplete="off" autocapitalize="words" required="required">
         <textarea rows="7" type="text" id="ContactFormMessage" placeholder="Type your Message here" name="Message" autocomplete="off" autocapitalize="words"></textarea>
-        <input type="hidden" name="_gotcha"><!-- use this to prevent spam -->
+        <input type="hidden" name="_gotcha">
     
     <!-- <label for="ContactFormName" class="label--hidden">Name</label>
     <input type="text" id="ContactFormName" name="contact[name]" placeholder="Name" autocapitalize="words" value="">
