Modified catalogue page

--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -70,9 +70,9 @@
     rel="stylesheet" type="text/css" media="all" />
 
   <link rel="stylesheet" type="text/css"
-    href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 
-
+<!-- 
   <link rel="stylesheet" type="text/css"
     href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 
@@ -82,7 +82,7 @@
 
 
   <link rel="stylesheet" type="text/css"
-    href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+    href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
 
   <script src="../code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="../ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
@@ -91,43 +91,10 @@
 
 
   <script>
-    window.preloader_enable = false;
+     window.preloader_enable = false;
     window.use_sticky = true;
-    window.ajax_cart = true;
-    window.money_format = "Rs. {{amount}}";
-    window.shop_currency = "INR";
-    // window.money_format = "Rs. {{amount}}";
-    window.shop_currency = "INR";
-    window.show_multiple_currencies = true;
-    window.enable_sidebar_multiple_choice = false;
-    window.loading_url = "../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/loading9491.gif?v=9255329245202621775";
-    window.dropdowncart_type = "click";
-    window.file_url = "http://cdn.shopify.com/s/files/1/0437/5671/6194/files/?2174";
-    window.asset_url = "";
-    window.items = "Items";
-    window.many_in_stock = "Many In Stock";
-    window.out_of_stock = " Out of stock";
-    window.in_stock = " In Stock";
-    window.unavailable = "Unavailable";
-    window.product_name = "Product Name";
-    window.product_image = "Product Image";
-    window.product_desc = "Product Description";
-    window.available_stock = "Available In stock";
-    window.unavailable_stock = "Unavailable In stock";
-    window.compare_note = "Product Added over 8 product !. Do you want to compare 8 added product ?";
-    window.added_to_cmp = "Added to compare";
-    window.add_to_cmp = "Add to compare";
-    window.select_options = "Select options";
-    window.add_to_cart = "Add to Cart";
-    window.confirm_box = "Yes,I want view it!";
-    window.cancelButtonText = "Continue";
-    window.remove = "Remove";
     window.use_color_swatch = true;
-    window.color_swatch_style = "variant_grouped";
-    window.newsletter_popup = true;
     window.infinity_scroll_feature = false;
-    window.no_more_product = "No more product";
-    var compare_list = [];   
   </script>
   <!-- Header hook for plugins ================================================== -->
 
