--- a/pages/contact.html
+++ b/pages/contact.html
@@ -258,7 +258,7 @@
                               <nav class="nav-bar" role="navigation">
                                 <ul class="site-nav checking">
                                     <li class="menu-lv-1 item">
-                                      <a class="current"  href="../index.html">
+                                      <a class="menu__moblie"  href="../index.html">
                                         Home
                                       </a>
                                     </li>
@@ -343,7 +343,7 @@
                                     </li>
                                     <li class="menu-lv-1 item">
 
-                                      <a class="menu__mobile"  href="#">
+                                      <a class="current"  href="#">
 
                                         Contact
                                       </a>
@@ -737,7 +737,7 @@
 
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="photos.html">Gallery</a></li>
-                    <li><a href="#">Catalogue</a></li>
+                    <li><a href="catalogue.html">Catalogue</a></li>
                     <!-- <li><a href="pages/privacy-policy.html">Privacy Policy</a></li>
                     <li><a href="pages/privacy-policy.html">Shipping Details</a></li> -->
                   </ul>
