modified photos pages

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -43,15 +43,15 @@
 <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/frame.scssf526.css?v=3971717294728970669" rel="stylesheet" type="text/css" media="all" /> 
 <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/home-sections.scss9211.css?v=12654800420335229906" rel="stylesheet" type="text/css" media="all" /> 
 <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/style5576.css?v=5169164907222966650" rel="stylesheet" type="text/css" media="all" />  
-<link href="http://cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/slick.scss?v=10122632354879939270" rel="stylesheet" type="text/css" media="all" />
+<link href="https://cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/slick.scss?v=10122632354879939270" rel="stylesheet" type="text/css" media="all" />
 <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/prettyPhotode1c.css?v=12757784511525754184" rel="stylesheet" type="text/css" media="all" />  
 <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/animatea14e.css?v=17046942425478865338" rel="stylesheet" type="text/css" media="all" />
 <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/font-all.minc83d.css?v=14597452402338798491" rel="stylesheet" type="text/css" media="all" />  
   
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+<!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
   
 <script src="../code.jquery.com/jquery-3.2.1.min.js"></script>  
 <script src="../ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script> 
