--- a/branch/karaikudi.html
+++ b/branch/karaikudi.html
@@ -12,7 +12,7 @@
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   
-  <link rel="shortcut icon" href="sam.png" type="image/png" />
+  <link rel="shortcut icon" href="../img/sam.png" type="image/png" />
   
   <!-- Title and description ================================================== -->
   <title>
@@ -83,7 +83,7 @@
                 <div class="grid--full site-header__menubar">
                   <h1 class="site-header__logo order-header  post-large--hide large--hide medium-down--hide">
                     <a href="../index.html" itemprop="url" style="max-width: 50 px;">
-                      <img class="normal-logo" src="logo.png" alt="Sam Ceramics">
+                      <img class="normal-logo" src="../img/logo.png" alt="Sam Ceramics">
                       <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
                     </a>
                   </h1>
@@ -105,7 +105,7 @@
                             <div class="header-logo">
                               <h1 class="site-header__logo" itemscope itemtype="http://schema.org/Organization">
                                 <a  href="../index.html" style="max-width:20 px;">
-                                  <img class="normal-logo" src="logo.png" alt="Sam ceramics" itemprop="logo">
+                                  <img class="normal-logo" src="../img/logo.png" alt="Sam ceramics" itemprop="logo">
                                   <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
                                 </a>
                               </h1>
@@ -246,7 +246,7 @@
                                       </a>
                                     </li>
                                     <li class="menu-lv-1 item">
-                                      <a class="menu__moblie "  href="pages/about.html">
+                                      <a class="menu__moblie "  href="../pages/about.html">
                                         About Us
                                         <!-- <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -269,17 +269,17 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/about.html">
+                                            <a class="  " href="../pages/about.html">
                                               KAG
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/services.html">
+                                            <a class="  " href="../pages/services.html">
                                               Tecton
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/faqs.html">
+                                            <a class="  " href="../pages/catalogue.html">
                                               Catalogue
                                             </a>
                                           </li>
@@ -302,12 +302,12 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/about.html">
+                                            <a class="  " href="../pages/about.html">
                                               Photos
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/services.html">
+                                            <a class="  " href="../pages/services.html">
                                               Videos
                                             </a>
                                           </li>
@@ -315,7 +315,7 @@
                                       </div>
                                     </li>
                                     <li class="menu-lv-1 item">
-                                      <a class="menu__mobile"  href="pages/contact.html">
+                                      <a class="menu__mobile"  href="../pages/contact.html">
                                         Contact
                                       </a>
                                     </li>
@@ -454,8 +454,8 @@
     <div class="variable-width slideshow"  data-init-slideshow data-dots="false" data-autoplay="true" data-autoplay-speed="5000" data-fade="true">
       
       <div class="slick-list slider_style_3 slider-1596439642225-list">                
-        <img src="./img/kkdi1.jpg"  class="slide-img medium-down--hide" alt="" />
-        <img src="./img/kkdi1.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
+        <img src="../img/kkdi1.jpg"  class="slide-img medium-down--hide" alt="" />
+        <img src="../img/kkdi1.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
         <div class="slider-content slider-content-bg">
           <div class="slide_left">
             <h2 class="slide-heading animated" style="font-size: 60px; color:#000000;">
@@ -476,8 +476,8 @@
         </div>
       
       <div class="slick-list slider_style_1 slider-1592399068412-list"> 
-           <img src="./img/kkdi4.jpg"  class="slide-img medium-down--hide" alt="" />
-           <img src="./img/kkdi4.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
+           <img src="../img/kkdi4.jpg"  class="slide-img medium-down--hide" alt="" />
+           <img src="../img/kkdi4.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
           <div class="slider-content slider-content-bg">
             <div class="slide_left">
               <h2 class="slide-heading animated" style="font-size: 60px; color:#000000;">Taking flooring to <br> another level</h2>
@@ -497,8 +497,8 @@
         </style>
         </div>
       <div class="slick-list slider_style_2 slider-1592399153626-list">
-          <img src="./img/kkdi5.jpg"  class="slide-img medium-down--hide" alt="" />
-          <img src="./img/kkdi5.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
+          <img src="../img/kkdi5.jpg"  class="slide-img medium-down--hide" alt="" />
+          <img src="../img/kkdi5.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
         <div class="slider-content slider-content-bg">
           <div class="slide_left">
             <h2 class="slide-heading animated" style="font-size: 60px; color:#000000;">
@@ -542,7 +542,7 @@
         <div class="grid__item">
           <div class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
             <div class="section-two-leftimg">
-              <img src="./img/shopcover.jpg" alt="" style="width: 95%;"/> 
+              <img src="../img/shopcover.jpg" alt="" style="width: 95%;"/> 
             </div>
           </div>
           <div class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
@@ -609,7 +609,7 @@
               <div class="overlay style_1">
                 <div class="featured-image">
                   <a class="banner_half_img" href="pages/contact.html">
-                    <img src="img/Shop2.JPG" alt="Stylish Ceramic Tiles" />
+                    <img src="../img/Shop2.JPG" alt="Stylish Ceramic Tiles" />
                   </a>
                 </div>
                 <!-- <div class="featured-content oneimage-1596277330278-0 imageText_position imgtxt-middle" >
@@ -623,7 +623,7 @@
               <div class="overlay style_1">
                 <div class="featured-image">
                   <a class="banner_half_img" href="pages/contact.html">
-                    <img src="img/shop1.JPG" alt="Stylish Wooden Tiles" />
+                    <img src="../img/shop1.JPG" alt="Stylish Wooden Tiles" />
                   </a>
                 </div>
                 <!-- <div class="featured-content oneimage-1596277330278-2 imageText_position imgtxt-middle">
@@ -673,15 +673,15 @@
                       <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                         <div class="products product-hover-11">
                           <div class="product-container">
-                            <a href="collections/flooring-products/products/glazed-vitrified-tiles.html" class="grid-link">
+                            <a href="" class="grid-link">
                               <div class="ImageOverlayCa"></div>
                               <div class="reveal">
                                 <span class="product-additional">
-                                  <a href="collections/flooring-products/products/glazed-vitrified-tiles.html" class="grid-link">
+                                  <a href="" class="grid-link">
                                     <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product5_large00d1.jpg?v=1597918329" class="featured-image" alt="Glazed Vitrified Tiles">
                                   </a>
                                 </span>
-                                <a href="collections/flooring-products/products/glazed-vitrified-tiles.html" class="grid-link">
+                                <a href="" class="grid-link">
                                   <img  src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product2_2ae4337a-b86b-4f92-aab2-a471c73e7f4b_large00d1.jpg?v=1597918329" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                                 </a>
                               </div>
@@ -720,7 +720,7 @@
                             </div>
                           </div>
                           <div class="product-detail">
-                            <a href="collections/flooring-products/products/glazed-vitrified-tiles.html" class="grid-link__title">
+                            <a href="" class="grid-link__title">
                               Glazed Vitrified Tiles
                             </a>
                             <p class="product-vendor"><span>Rainbow</span></p>
@@ -806,7 +806,7 @@
                         </div>
                       </div>
                       <div class="product-detail">
-                        <a href="collections/flooring-products/products/imperial-red.html" class="grid-link__title">Imperial Red</a>
+                        <a href="" class="grid-link__title">Imperial Red</a>
                         <p class="product-vendor"><span>Tilex</span></p>
                         <div class="grid-link__meta">
                           <!-- <div class="product_price">
@@ -1592,7 +1592,7 @@
                 </div>
               </div>
             </div>
-            <div class="dt-sc-hr-invisible-medium"></div>
+            <!-- <div class="dt-sc-hr-invisible-medium"></div> -->
           </div>
         </div>
         <style></style>
@@ -1637,16 +1637,16 @@
               </div>
             </div>
           </div> -->
-          <script type="text/javascript">
+          <!-- <script type="text/javascript">
           window.brand_navigation = true;
           window.brand_pagination = true
           </script>
-          </div>
+          </div> -->
 
           <div id="shopify-section-1596278083121" class="shopify-section index-section home-wide-banner">
             <div class=" container-fluid ">
               <div class="dt-sc-hr-invisible-medium"></div>
-              <div class="wide-banner-type" style="margin-top:0px; margin-bottom:0px; background-image:url('./img/kkdi3.JPG');background-attachment:fixed;background-repeat:no-repeat;background-position:center right;background-size:cover; ">
+              <div class="wide-banner-type" style="margin-top:0px; margin-bottom:0px; background-image:url('../img/kkdi3.JPG');background-attachment:fixed;background-repeat:no-repeat;background-position:center right;background-size:cover; ">
                 <div class="container">
                   <div class="grid-uniform CollectionItems">
                     <div class="grid__item wide--one-whole banner-content text-left">
@@ -1857,8 +1857,8 @@
                 </style>
                 <div class="footer__logo">
                   <a href="../index.html">
-                    <img style="align-items: center; align-content: center;" src="sam.png" alt="Sam Ceramics">
-                    <img src="name.png" alt="Sam Ceramics">
+                    <img style="align-items: center; align-content: center;" src="../img/sam.png" alt="Sam Ceramics">
+                    <img src="../img/name.png" alt="Sam Ceramics">
                   </a>
                 </div>
                <!-- <ul class="no-bullets footer__social">
@@ -1932,9 +1932,9 @@
               <div class="collapsible-content__inner">
                 <div class="footer__collapsible">
                   <ul class="no-bullets site-footer__linklist">
-                    <li><a href="karaikudi.html">Karaikudi</a></li>
-                    <li><a href="pudukkottai.html">Pudukkottai</a></li>
-                    <li><a href="thirupathur.html">Thirupathur</a></li>
+                    <li><a href="../branch/karaikudi.html">Karaikudi</a></li>
+                    <li><a href="../branch/pudukkottai.html">Pudukkottai</a></li>
+                    <li><a href="../branch/thirupathur.html">Thirupathur</a></li>
                     <!-- <li><a href="pages/terms-and-conditions.html">Gallery</a></li>
                     <li><a href="pages/services.html">Contact Us</a></li> -->
                   </ul>
@@ -1956,7 +1956,7 @@
               <div class="collapsible-content__inner">
                 <div class="footer__collapsible">
                   <ul class="no-bullets site-footer__linklist">
-                    <li><a href="pages/about.html">About Us</a></li>
+                    <li><a href="../pages/about.html">About Us</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Catalogue</a></li>
                     <!-- <li><a href="pages/privacy-policy.html">Privacy Policy</a></li>
