--- a/pages/photos.html
+++ b/pages/photos.html
@@ -549,11 +549,11 @@
         </a><div class="reveal"><a href="flooring-products/products/galaxy-tiles.html" class="grid-link"> 
           <span class="product-additional">   
             </span></a><a href="flooring-products/products/galaxy-tiles.html" class="grid-link">  
-              <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product2_large69e4.jpg?v=1597918195" class="featured-image" alt="Galaxy Tiles">
+              <img src="../img/Gallery/g4.JPG" class="featured-image" alt="Galaxy Tiles">
             </a>
           
           <a href="flooring-products/products/galaxy-tiles.html" class="grid-link">  
-            <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product3_afdce257-c251-4078-9e84-0b19888c322c_large9bac.jpg?v=1597918198" class="hidden-feature_img" alt="Galaxy Tiles">
+            <img src="../img/Gallery/g5.JPG" class="hidden-feature_img" alt="Galaxy Tiles">
           </a>
         </div> 
 
