modified about us and index page

--- a/index.html
+++ b/index.html
@@ -886,8 +886,8 @@
                                 //]]>
                             </script>
                             <div class="deal-btn">
-                              <a class="btn" href="#" style="color:#fff;background-color:rgba(0,0,0,0);">
-                                Shop Now
+                              <a class="btn" href="pages/contact.html" style="color:#fff;background-color:rgba(0,0,0,0);">
+                                Contact Now
                               </a>
                             </div>
                           </div>
