--- a/pages/about.html
+++ b/pages/about.html
@@ -92,7 +92,7 @@
   <div class="shifter-page is-moved-by-drawer" id="PageContainer">
     <div id="PageContainer"></div>
     <div class="quick-view"></div>
-    
+
     <div class="wrapper-header wrapper-container">
       <div class="header-type-8">
         <header class="site-header header-default">
@@ -465,22 +465,17 @@
     <nav class="breadcrumb" aria-label="breadcrumbs">
       <div class="container-bg">
 
-        <h1>About</h1>
+        <h1>About Us</h1>
         <a href="../index.html" title="Back to the frontpage">Home</a>
 
         <span aria-hidden="true" class="breadcrumb__sep">&#47;</span>
-        <span>About</span>
+        <span>About Us</span>
 
 
       </div>
     </nav>
 
     <main class="main-home-content ">
-
-
-
-
-
       <div class="wrapper">
         <div class="grid-uniform">
           <div class="grid__item">
@@ -488,9 +483,6 @@
             <div class="grid">
               <div class="grid__item">
                 <div id="shopify-section-about" class="shopify-section">
-
-
-
                   <div data-section-id="about" data-section-type="About section" class="about-us">
 
                     <div class="grid-uniform section-two block1">
@@ -512,16 +504,16 @@
                             class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
                             <h2 style="color:#8a704d">Our Mission</h2>
 
-                            <p style="color:#878787">We are the Authorised Distributor of KAG&TECTON Products. KAG Tiles
+                            <p style="text-align: justify; color:#878787">We are the Authorised Distributor of KAG&TECTON Products. KAG Tiles
                               a Division of 20 year renowned Multicrore Group Company KAG INDIA PVT. Ltd., head
                               quartered at chennai INDIA is moving ahead keeping in mind the Darwin principle responding
                               and adopting to the changing needs in the competitive scenario. .As one of the oldest home
                               and office remodeling companies in the city, we have a very special feeling that our duty
                               is to be the best!.Sam ceramics is famous for its lowest price and best quality.Sam
                               Ceramics is started in 2017 at Amaravathiputhur. We are a authorised distributer of KAG
-                              and Tecton brands.our brands are</p>
+                              and Tecton brands.</p>
 
-                            <div class="grid__item">
+                            <!-- <div class="grid__item">
                               <div
                                 class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
                                 <ul>
@@ -550,7 +542,7 @@
 
                                 </ul>
                               </div>
-                            </div>
+                            </div> -->
 
                             <!-- <a class="btn" href="#">Read More</a> -->
 
@@ -573,16 +565,16 @@
                             class="grid__item wide--one-third post-large--one-third large--one-third medium--one-half small-grid__item">
                             <div class="text-block">
 
-                              <h4> High quality & best...</h4>
-
-
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                              <h4> High quality & best</h4>
+                              <h4> High quality & best</h4>
+                              <h4> High quality & best</h4>
+                              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                                 exercitation ullamco laboris nisi ut aliquip ex ea</p>
 
 
                               <p>Commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
+                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p> -->
 
                             </div>
                           </div>
@@ -650,12 +642,10 @@
                                     <h4 style="color:#ffffff;">ceramic tiles</h4>
 
 
-                                    <p style="color:#ffffff;">Morbi in risus in nisi eleifend convallis. Etiam pretium
-                                      varius quam in aliquam. Curabitur malesuada elit sed enim placerat, vitae interdum
-                                      erat cursus.</p>
+                                    <p style="text-align: justify; color:#ffffff;">Ceramic is best known for its durability. Ceramic Tiles are suitable for wall tile, most residential uses, and are hard enough for commercial applications.</p>
 
 
-                                    <span class="price" style="color:#ffffff;background:#704a28;">$10.99</span>
+                                    <span class="price" style="color:#ffffff;background:#704a28;"></span>
 
                                   </div>
                                 </div>
@@ -678,12 +668,11 @@
                                     <h4 style="color:#ffffff;">Decorative tiles</h4>
 
 
-                                    <p style="color:#ffffff;">Pellentesque euismod vestibulum sollicitudin. Nunc sem
-                                      nulla, consequat eget nisi non, efficitur posuere odio. Duis pretium pretium
-                                      neque, siamet ullamcorper.</p>
+                                    <p style="text-align: justify; color:#ffffff;">Decorative tiles can give your room a unique and personalized look.
+                                      Find here Decorative Wall Tiles, Designer Wall Tile manufacturers, suppliers & exporters in India.</p>
 
 
-                                    <span class="price" style="color:#ffffff;background:#dcb658;">$10.99</span>
+                                    <span class="price" style="color:#ffffff;background:#dcb658;"></span>
 
                                   </div>
                                 </div>
@@ -707,12 +696,10 @@
                                     <h4 style="color:#ffffff;">porcelain tiles</h4>
 
 
-                                    <p style="color:#ffffff;">Sed semper ante vel sapien tincidunt, sed commodo odio
-                                      pretium. Fusce posuere leo ut lacus efficitur, nec malesuada ex varius. Etiam id
-                                      sapien placerat tincidunt velit.</p>
+                                    <p style="text-align:justify; color:#ffffff;">Porcelain tiles or ceramic tiles are porcelain or ceramic tiles commonly used to cover floors and walls, with a water absorption rate of less than 0.5 percent.</p>
 
 
-                                    <span class="price" style="color:#ffffff;background:#dcb658;">$10.99</span>
+                                    <span class="price" style="color:#ffffff;background:#dcb658;"></span>
 
                                   </div>
                                 </div>
@@ -737,12 +724,10 @@
                                     <h4 style="color:#ffffff;">Sandstone Tiles</h4>
 
 
-                                    <p style="color:#ffffff;">Cras sagittis sapien tellus, id lacinia nunc suscipit
-                                      vitae. Integer eget lectus et diam lobortis laoreet vitae id nunc. Pellentesque a
-                                      nulla rutrum posuere cubilia felis.</p>
+                                    <p style="text-align: justify;color:#ffffff;">Rock formations that are primarily composed of sandstone usually allow the percolation of water, other fluids and are porous enough to store large quantities.</p>
 
 
-                                    <span class="price" style="color:#ffffff;background:#704a28;">$10.99</span>
+                                    <span class="price" style="color:#ffffff;background:#704a28;"></span>
 
                                   </div>
                                 </div>
@@ -755,13 +740,11 @@
                     </div>
 
 
-
-
                     <div class="grid-uniform section-seven">
                       <div class="container">
 
                         <div class="main-heading">
-                          <h2 style="color:#8a704d">Brands</h2>
+                          <h2 style="color:#8a704d">Our Brands</h2>
 
                         </div>
 
@@ -811,10 +794,7 @@
                         </div>
                       </div>
                     </div>
-
                   </div>
-
-
 
                   <script type="text/javascript">
                     $(document).ready(function () {
@@ -851,13 +831,6 @@
                       });
                     });
                   </script>
-
-
-
-
-
-
-
 
                   <style>
                     .about-us .section-two li {
@@ -953,13 +926,6 @@
                       background: ;
                     }
                   </style>
-
-
-
-
-
-
-
 
                 </div>
               </div>
