modified about us floor products

--- a/pages/about.html
+++ b/pages/about.html
@@ -565,9 +565,10 @@
                             class="grid__item wide--one-third post-large--one-third large--one-third medium--one-half small-grid__item">
                             <div class="text-block">
 
-                              <h4> High quality & best</h4>
-                              <h4> High quality & best</h4>
-                              <h4> High quality & best</h4>
+                              <h4> For Both Home and Office</h4>
+                              <p><sup>X</sup> Best Floor Tiles <sub>X</sub></p>
+                              <p><sup>X</sup> Best Wall Tiles <sub>X</sub></p>
+                              <p><sup>X</sup> Sanitary Wares <sub>X</sub></p>
                               <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                                 exercitation ullamco laboris nisi ut aliquip ex ea</p>
@@ -668,8 +669,9 @@
                                     <h4 style="color:#ffffff;">Decorative tiles</h4>
 
 
-                                    <p style="text-align: justify; color:#ffffff;">Decorative tiles can give your room a unique and personalized look.
-                                      Find here Decorative Wall Tiles, Designer Wall Tile manufacturers, suppliers & exporters in India.</p>
+                                    <p style="text-align: justify; color:#ffffff;">
+                                      Decorative tiles can give your room a unique and personalized look.
+                                      Find here Decorative Designer Wall Tiles, manufacturers, suppliers & exporters in India.</p>
 
 
                                     <span class="price" style="color:#ffffff;background:#dcb658;"></span>
