--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                       </a>
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
-                                      <a class="menu__moblie "  href="#">
+                                      <a class="menu__moblie "  href="pages/catalogue.html">
                                         Product
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -295,7 +295,7 @@
                                       </div>
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
-                                      <a class="menu__moblie "  href="#">
+                                      <a class="menu__moblie "  href="pages/photos.html">
                                         Gallery
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
